--- a/CorrentesEletricas.html
+++ b/CorrentesEletricas.html
@@ -143,7 +143,7 @@
 
     </p>
     <br>
-    <p>
+    <p class="margem">
       Para que ocorra esse movimento o sistema apresenta uma diferença de potencial elétrico(ddp) ou tensão elétrica.
       Quando a energia elétrica passa por resistores ela pode ser transformada em energia térmica, este fenômeno é
       conhecido como Efeito Joule.(GOUVEIA,2023) <br>
@@ -154,13 +154,13 @@
     elétrica.(GOUVEIA,2023)
     <br>
     <br>
-    <p>
+    <p class="margem">
       Eletrônicos e pilhas apresentam os pólos positivo e negativo, que é um claro exemplo do diferencial de potencial
       elétrico. Existem dois sentidos de corrente elétrica, a corrente elétrica real é aquela que possui o sentido do
       movimento dos elétrons, e a corrente elétrica convencional que tem sentido contrário ao movimento dos elétrons e
       tem destaque pelo movimento das cargas elétricas positivas.(GOUVEIA,2023)</p>
     <br>
-    <p>Além do sentido, as correntes elétricas também podem ser classificadas entre corrente contínua (CC) e corrente
+    <p class="margem">Além do sentido, as correntes elétricas também podem ser classificadas entre corrente contínua (CC) e corrente
       alternada (CA). A corrente contínua é gerada por pilhas e baterias, apresenta diferença de potencial (ddp)
       contínua, além disso, possui sentido e intensidade constantes. A corrente alternada é gerada pelas usinas de
       energia elétrica, apresenta diferença de potencial(ddp) alternada, com o sentido e intensidade
@@ -175,39 +175,39 @@
         Aqui</a>
     </legend>
     <br>
-    <p>A tensão elétrica de um circuito refere-se à diferença do potencial elétrico de dois pontos de um condutor, de
+    <p class="margem">A tensão elétrica de um circuito refere-se à diferença do potencial elétrico de dois pontos de um condutor, de
       acordo com o Sistema Internacional de medidas (SI) ela é medida em Volts (V) e pode ser calculada pela fórmula:
       U=R.I, ou seja, o inverso da resistência elétrica.(ALVES,2023)</p>
     <br>
-    <p>A intensidade de uma corrente elétrica refere-se à quantidade de carga elétrica que atravessa um condutor durante
+    <p class="margem">A intensidade de uma corrente elétrica refere-se à quantidade de carga elétrica que atravessa um condutor durante
       um determinado período de tempo, no (SI) a intensidade é medida em Ampère (A), a intensidade pode ser calculada
       através da fórmula:</p>
     <img src="Imagens/formula.png" alt="formula">
     <br>
-    <p>Onde,
+    <p class="margem">Onde,
 
     </p>
-    <p> I= intensidade da corrente (A)
+    <p class="margem"> I= intensidade da corrente (A)
     </p>
-    <p> Q= carga elétrica ( C)
+    <p class="margem"> Q= carga elétrica ( C)
     </p>
-    <p> Δt: intervalo de tempo (s)
+    <p class="margem"> Δt: intervalo de tempo (s)
     </p>
     <br>
-    <p>
+    <p class="margem">
       Por fim, a energia elétrica de uma corrente é produzida através do potencial elétrico de dois pontos de um
       condutor, para calcular a energia elétrica é utilizada a seguinte equação:
     </p>
     <br>
-    <p>Eel = P . ∆t</p>
-    <p>Onde,
+    <p class="margem">Eel = P . ∆t</p>
+    <p class="margem">Onde,
 
     </p>
-    <p> Eel: energia elétrica (KWh)
+    <p class="margem"> Eel: energia elétrica (KWh)
     </p>
-    <p> P: potência (KW)
+    <p class="margem"> P: potência (KW)
     </p>
-    <p> ∆t: variação do tempo (h)
+    <p class="margem"> ∆t: variação do tempo (h)
     </p>
   </div>
   
