--- a/Energia.html
+++ b/Energia.html
@@ -147,7 +147,7 @@
       <br>
     </p>
     <br>
-    <p>
+    <p class="margem">
     <blockquote>“Segundo Rafael Helerbrock, A energia é
       expressa em muitas formas – cinética, potencial,
       química, entre outras, mas, essencialmente,
@@ -164,18 +164,18 @@
         Aqui</a> </legend>
 
     <br>
-    <p> A energia é um conceito bem complexo que envolve outro conceito, o trabalho.
+    <p class="margem"> A energia é um conceito bem complexo que envolve outro conceito, o trabalho.
       Existem na natureza cinco formas de energia: mecânica, térmica, elétrica, química e atômica.(HELERBROCK, 2023).
     </p>
     <br>
-    <p>
+    <p class="margem">
       Segundo Pâmella Raphaella Melo, a energia mecânica é a energia associada ao movimento e à posição de um objeto.
       Ela é composta por duas formas de energia: a energia cinética e a energia potencial.
 
 
     </p>
     <br>
-    <p> A energia cinética é a energia associada ao movimento de um objeto. Quanto maior a velocidade do objeto, maior a
+    <p class="margem"> A energia cinética é a energia associada ao movimento de um objeto. Quanto maior a velocidade do objeto, maior a
       sua energia cinética.A fórmula para calcular a energia cinética é E = (1/2)mv², onde E é a energia cinética, m é a
       massa do objeto e v é a sua velocidade.(Melo, 2023).</p>
     <p> A energia potencial é a energia associada à posição de um objeto levando em consideração um ponto de referência.
@@ -189,14 +189,14 @@
         Aqui</a> </legend>
     <br>
     <h1><strong class="textosTitulo"><em>Energia Térmica </em> </strong></h1>
-    <p>A energia térmica é a energia associada à temperatura de um objeto. Ela está associada ao movimento aleatório das
+    <p class="margem">A energia térmica é a energia associada à temperatura de um objeto. Ela está associada ao movimento aleatório das
       moléculas que formam um objeto e quanto maior a temperatura, maior é a agitação dessas moléculas e com isso maior
       é a energia térmica.(PRASS, 2023).
     </p>
-    <p>A temperatura ou esse “grau de agitação” pode ser transferido por condução, convecção ou radiação.(PRASS, 2023).
+    <p class="margem">A temperatura ou esse “grau de agitação” pode ser transferido por condução, convecção ou radiação.(PRASS, 2023).
       Ex: quando temos uma xícara de chá em cima de uma mesa, o chá irá passar o calor para a mesa até que as duas
       estejam com a mesma temperatura.</p>
-    <p> Isso acontece porque as moléculas tendem sempre a ficar em um estado estável e constante, com isso é passado
+    <p class="margem"> Isso acontece porque as moléculas tendem sempre a ficar em um estado estável e constante, com isso é passado
       esse grau de agitação para todas as moléculas até que todas estejam na mesma frequência de agitação.(ANJOS, 2023)
     </p>
     <br>
@@ -209,7 +209,7 @@
       </a> </legend>
     <br>
     <h1><strong class="textosTitulo"><em> Energia Elétrica </em> </strong></h1>
-    <p>A energia elétrica é uma forma de energia que resulta da movimentação de cargas elétricas, como elétrons, através
+    <p class="margem">A energia elétrica é uma forma de energia que resulta da movimentação de cargas elétricas, como elétrons, através
       de um condutor. Essa energia é fundamental para o funcionamento de diversas tecnologias e equipamentos, desde
       lâmpadas e motores elétricos até celulares e computadores. (HELERBROCK, 2023).</p>
     <br>
@@ -220,26 +220,26 @@
         Imagem Dísponivel
         Aqui</a> </legend>
     <br>
-    <p>A unidade de medida da energia elétrica é o watt-hora (Wh), que indica a quantidade de energia consumida por um
+    <p class="margem">A unidade de medida da energia elétrica é o watt-hora (Wh), que indica a quantidade de energia consumida por um
       dispositivo em uma hora de funcionamento. A energia elétrica é geralmente gerada em usinas de energia, que
       convertem outras formas de energia, como a energia mecânica ou térmica, em energia elétrica.(GOUVEIA, 2023).</p>
-    <p>
+    <p class="margem">
       A energia elétrica pode ser transmitida através de fios e cabos elétricos a longas distâncias, o que permite a
       distribuição da energia para diferentes locais. A energia elétrica também pode ser armazenada em baterias e
       capacitores, para ser utilizada posteriormente.(HELERBROCK, 2023).</p>
     <br>
     <h1><strong class="textosTitulo"><em>Energia Quimica</em> </strong></h1>
     <br>
-    <p>
+    <p class="margem">
       A energia química é a energia armazenada nas ligações químicas entre os átomos de moléculas. Quando ocorre uma
       reação química, a energia química é convertida em outras formas de energia, como energia térmica, energia elétrica
       ou energia mecânica.(HELERBROCK, 2023).
 
     </p>
-    <p> Os combustíveis, como gasolina, carvão e gás natural, são exemplos de fontes de energia química que são
+    <p class="margem"> Os combustíveis, como gasolina, carvão e gás natural, são exemplos de fontes de energia química que são
       frequentemente utilizados na geração de energia. (HELERBROCK, 2023).
     </p>
-    <p>Quando um combustível é queimado, ocorre uma reação química que libera a energia química armazenada na molécula,
+    <p class="margem">Quando um combustível é queimado, ocorre uma reação química que libera a energia química armazenada na molécula,
       que é transformada em calor e energia mecânica, por exemplo, para mover um carro ou gerar eletricidade em uma
       usina.(HELERBROCK, 2023).</p>
     <br>
@@ -249,12 +249,12 @@
         Aqui</a> </legend>
     <h1><strong class="textosTitulo"><em> Energia Atomica </em> </strong></h1>
     <br>
-    <p>A energia atômica é a energia liberada a partir do núcleo de um átomo. Essa energia é liberada quando ocorre uma
+    <p class="margem">A energia atômica é a energia liberada a partir do núcleo de um átomo. Essa energia é liberada quando ocorre uma
       reação nuclear, que pode ser de dois tipos: fissão ou fusão.(HELERBROCK, 2023).</p>
     <br>
     <h1><strong class="textosTitulo"><em> Fissão Nuclear</em> </strong></h1>
     <br>
-    <p>Na fissão nuclear, um núcleo atômico pesado é dividido em dois núcleos menores, liberando uma grande quantidade
+    <p class="margem">Na fissão nuclear, um núcleo atômico pesado é dividido em dois núcleos menores, liberando uma grande quantidade
       de energia. Essa energia pode ser usada para gerar eletricidade em usinas nucleares.(HELERBROCK, 2023).</p>
     <br>
     <img src="Imagens/fissão-nuclear2-768x560.png" alt="Foto Satelite" width="600px" style="margin-left: 110px;">
@@ -265,7 +265,7 @@
     <br>
     <h1><strong class="textosTitulo"><em>Fusão Nuclear</em> </strong></h1>
     <br>
-    <p>
+    <p class="margem"> 
       A energia atômica é uma forma de energia não renovável, já que depende de fontes de urânio e outros elementos radioativos que são finitos na Terra. Além disso, o uso da energia nuclear tem implicações ambientais e de segurança significativas, como o risco de acidentes nucleares e a produção de resíduos radioativos que podem ser perigosos por centenas de milhares de anos. (HELERBROCK, 2023).   </p>
     <br>
     <img src="Imagens/57a1c0dfb60c3-fusao-nuclear.webp" alt="Foto Satelite" width="600px" style="margin-left: 110px;">
@@ -273,7 +273,7 @@
         Imagem Dísponivel
         Aqui</a> </legend>
     <br>
-    <p>
+    <p class="margem">
       A energia atômica é uma forma de energia não renovável, já que depende de fontes de urânio e outros elementos
       radioativos que são finitos na Terra. Além disso, o uso da energia nuclear tem implicações ambientais e de
       segurança significativas, como o risco de acidentes nucleares e a produção de resíduos radioativos que podem ser
