--- a/Leis De Newton.html
+++ b/Leis De Newton.html
@@ -137,7 +137,7 @@
   <div class="conteudo">
     <h1><strong class="textosTitulo"><em> Leis De Newton </em> </strong></h1>
     <br>
-    <p>Você já ouviu falar no cara chamado Isaac Newton que certo dia caiu uma maçã na cabeça dele e ele propôs a Lei da
+    <p class="margem">Você já ouviu falar no cara chamado Isaac Newton que certo dia caiu uma maçã na cabeça dele e ele propôs a Lei da
       Gravidade, então este mesmo cara (Newton) além de propor várias teorias e ser um dos maiores fisicos que ja se
       teve na historia e que contribuiu em todas as áreas de forma gigantesca, ele também propôs três leis que são
       fundamentais para a física e inclusive quando você for estudar física Leis de Newton é um assunto indispensável
@@ -156,16 +156,16 @@
     <h3><strong class="textosTitulo">Lei Da Inercia
     </strong></h3>
     <br>
-    <p> A primeira Lei de Newton é chamada de princípio da inércia, mas é mais conhecida como Lei da Inércia.
+    <p class="margem"> A primeira Lei de Newton é chamada de princípio da inércia, mas é mais conhecida como Lei da Inércia.
       (HELERBROCK, Rafael, 2023).
     </p>
     <br>
-    <p> “Segundo Rafael Helerbrock (2023) "A primeira lei de Newton, também conhecida como princípio da inércia, afirma
+    <p class="margem"> “Segundo Rafael Helerbrock (2023) "A primeira lei de Newton, também conhecida como princípio da inércia, afirma
       que todo corpo permanece em seu estado de repouso ou em movimento retilíneo e uniforme caso as forças que atuem
       sobre ele se anulem.”
     </p>
     <br>
-    <p> Mas FISICAMENTE FALANDO, a Lei da Inércia significa que: se algo está parado esse algo pretende ficar parado,
+    <p class="margem"> Mas FISICAMENTE FALANDO, a Lei da Inércia significa que: se algo está parado esse algo pretende ficar parado,
       até venha alguém mexer nele, exemplo, seu celular, se você deixar ele no sofá ele ficará lá até alguém pegar ele,
       sem uma força exterior ele continuará parado, e o mesmo se aplica para corpos em movimento, mas para dar um
       exemplo precisamos ir lá pro espaço, já que lá não tem ar nem gravidade para nos atrapalhar, agora dando o
@@ -183,7 +183,7 @@
     <h3><strong class="textosTitulo"> Segunda Lei de Newton: Princípio Fundamental da Dinâmica
       </strong></h3>
     <br>
-    <p>
+    <p class="margem">
       A segunda Lei de Newton é o princípio Fundamental da Dinâmica, (HELERBROCK, 2023).
 
       “ Segundo Pâmella Raphaella Melo (2023) a segunda lei de
@@ -192,7 +192,7 @@
       aceleração é proporcional à sua massa."
 
     </p>
-    <p>Mas FISICAMENTE FALANDO, esta lei diz que você precisa aplicar uma força proporcionalmente a massa do corpo que
+    <p class="margem">Mas FISICAMENTE FALANDO, esta lei diz que você precisa aplicar uma força proporcionalmente a massa do corpo que
       você quer mover, e também que, a aceleração deste corpo será proporcional a massa (HELERBROCK, 2023).
       Vamos pensar num exemplo assim: você tem duas bolas num campo de futebol, mas vamos dispensar a grama, ar, e o
       resto, quero dizer que não vamos levar em consideração atrito. Mas voltando às bolas, você tem uma bola de futebol
@@ -217,7 +217,7 @@
     <h3><strong class="textosTitulo"> Terceira Lei de Newton-Lei de Ação e Reação
       </strong></h3>
     <br>
-    <p>
+    <p class="margem">
       “ Segundo Rafael Helerbrock (2023), a terceira lei de Newton, conhecida como lei da ação e reação, afirma que,
       para toda força de ação que é aplicada a um corpo, surge uma força de reação em um corpo diferente. Essa força de
       reação tem a mesma intensidade da força de ação e atua na mesma direção, mas com sentido oposto."
