--- a/MecanicaRe.html
+++ b/MecanicaRe.html
@@ -140,7 +140,7 @@
     <div class="conteudo">
         <h1><strong class="textosTitulo"><em> Mecanica Relativista </em> </strong></h1>
         <br>
-        <p>A mecânica relativista é a parte da física que estuda o movimento de objetos em altas velocidades próximas à
+        <p class="margem">A mecânica relativista é a parte da física que estuda o movimento de objetos em altas velocidades próximas à
             velocidade da luz. A mecânica relativista é baseada nas teorias da relatividade restrita, propostas por
             Albert Einstein em 1905 e finalizada em 1915 com a teoria da relatividade geral.(GOUVEIA, 2023).</p>
         <br>
@@ -148,7 +148,7 @@
         <h1><strong class="textosTitulo"><em>Restrita </em> </strong></h1>
         <br>
 
-        <p>
+        <p class="margem">
             Segundo Prof. Rosimar Gouveia, a relatividade restrita diz que as leis da física são as mesmas para todos os
             observadores em movimento uniforme (dinâmica estudada anteriormente na página), independentemente da
             velocidade relativa entre eles. Isso significa que as leis da física devem levar em consideração que não
@@ -156,16 +156,16 @@
         </p>
         <h1><strong class="textosTitulo"><em> Geral </em> </strong></h1>
         <br>
-        <p> A teoria da relatividade geral leva em consideração um observador em movimento variável próximo a velocidade
+        <p class="margem"> A teoria da relatividade geral leva em consideração um observador em movimento variável próximo a velocidade
             da luz, o que a teoria da relatividade restrita não considerava. (GOUVEIA, 2023). Principal Fórmula: E= mc²
         </p>
 
         <p>
-        <p>E= energia em repouso.
+        <p class="margem">E= energia em repouso.
         </p>
-        <p> m= massa.
+        <p class="margem"> m= massa.
         </p>
-        <p> c²= velocidade da luz no vácuo.</p>
+        <p class="margem"> c²= velocidade da luz no vácuo.</p>
         <br>
         <img src="Imagens/fotorelatividade.jpg" alt="Forças" width="800px">
         <legend style="text-align: center;"><a href="https://www.pexels.com/pt-br/foto/papel-de-parede-de-galaxia-cinza-e-preto-2150/"> Imagem Dísponivel
@@ -177,7 +177,7 @@
         </strong></h3>
       <br>
   
-      <p>A cinemática é uma parte da mecânica que estuda o movimento dos objetos, sem se preocupar com as causas desse
+      <p class="margem">A cinemática é uma parte da mecânica que estuda o movimento dos objetos, sem se preocupar com as causas desse
         movimento, ou seja, sem considerar as forças que atuam sobre o objeto. A cinemática se preocupa em descrever o
         movimento em termos de posição, velocidade e aceleração do objeto, bem como a trajetória que ele percorre.(DIAS,
         2023).</p>
