--- a/Ondas.html
+++ b/Ondas.html
@@ -138,14 +138,14 @@
     <h1><strong class="textosTitulo"><em> Fenômenos Ondulatórios </em> </strong></h1>
     
     <br>
-    <p>Nesta página será abordado conteúdo sobre Fenômenos Ondulatórios, Ondas, Tipos de Ondas e etc.
+    <p class="margem">Nesta página será abordado conteúdo sobre Fenômenos Ondulatórios, Ondas, Tipos de Ondas e etc.
       Definição de onda:
       <br>
       “Segundo Rafael Helerbrock, ondas são perturbações que se deslocam no espaço transportando, exclusivamente,
       energia de um ponto a outro, sem realizar transporte de matéria."
     </p>
     <br>
-    <p>
+    <p class="margem">
       Mas FISICAMENTE falando onda é algo invisível a olho nú e que tem a função de levar energia a algum lugar.
     </p>
 
@@ -155,16 +155,16 @@
         Aqui</a>
     </legend>
     <br>
-    <p> Os pontos mais altos são chamados de cristas, e os mais baixos são chamados de vales, a distância entre o começo
+    <p class="margem"> Os pontos mais altos são chamados de cristas, e os mais baixos são chamados de vales, a distância entre o começo
       e o fim de uma onda é chamado período(T), representada pela parte em vermelho da figura 1, e também temos a
       amplitude(A), que é a “altura” da onda, ou seja, é a variação de altura em relação ao ponto inicial(linha do
       meio/tempo) (HELERBROCK, 2023).</p>
     <br>
-    <p> Há mais uma propriedade chamada Frequência, que é medida em Hertz (Hz) e que nos diz de quanto em quanto tempo
+    <p class="margem"> Há mais uma propriedade chamada Frequência, que é medida em Hertz (Hz) e que nos diz de quanto em quanto tempo
       uma crista/vale passa por um ponto, a fórmula para se calcular a Frequência é 1 ➗ T (Período) (HELERBROCK, 2023).
     </p>
     <br>
-    <p> E tendo esses dados podemos dizer que tipo de onda é, pois cada tipo de onda tem Período, Amplitude etc
+    <p class="margem"> E tendo esses dados podemos dizer que tipo de onda é, pois cada tipo de onda tem Período, Amplitude etc
       "específicas", e o meio que usamos para isso é medir a velocidade com que a onda se propaga com a fórmula
       Velocidade(V)= Comprimento da onda (que é a distância entre uma crista e outra, ou um vale e outro (HELERBROCK,
       2023). Geralmente medido em Metros(M) ) e a Frequência que é medida em Hertz (Hz) logo tendo a fórmula V= C x F
@@ -176,7 +176,7 @@
     <br>
     <h3><strong class="textosTitulo"> Longitudinais e Transversais </strong></h3>
     <br>
-    <p>
+    <p class="margem">
       Segundo Frederico Borges de Almeida as ondas Longitudinais são ondas que podem se mover em qualquer direção, onde
       ela pode se mover da esquerda e voltar para a direita ou ir para a direita e voltar para a esquerda, como exemplo
       podemos dar uma mola que ao ser movimentada vai e volta e suas ondas se modificam dependendo do instante, mas já a
@@ -187,7 +187,7 @@
     <img src="Imagens/LongTrans.png" alt="Longitudinais e Transversais" style="margin-left: 150px;">
     <legend>Disponivel em:<a href="https://mundoeducacao.uol.com.br/fisica/ondas-2.htm"> Ondas. Conceito, natureza e tipos de ondas - Mundo Educação (uol.com.br)</a></legend>
 <br>
-<p>     Algo que também é legal destacar são que ondas podem se propagar de forma unidimensional, bidimensional e tridimensional, onde cada uma ao se propagar de forma específica acaba tendo uma "características" próprias.(LOOS, 2023)</p>
+<p class="margem">     Algo que também é legal destacar são que ondas podem se propagar de forma unidimensional, bidimensional e tridimensional, onde cada uma ao se propagar de forma específica acaba tendo uma "características" próprias.(LOOS, 2023)</p>
   </div>
   <div id="caixa">
     <h3>Tópicos em Ondas</h3>
