--- a/Optica.html
+++ b/Optica.html
@@ -148,7 +148,7 @@
         Aqui</a>
     </legend>
     <br>
-    <p>
+    <p class="margem">
       A ciência da óptica examina como a luz interage com vários materiais e objetos à medida que viaja pelo espaço. A
       óptica, para simplificar, estuda como a luz é refletida, dobrada e absorvida por várias substâncias (HELERBROCK,
       2023).
@@ -156,40 +156,40 @@
     </p>
     <br>
     <br>
-    <p> A óptica geométrica e a óptica física são os dois subcampos da óptica na física clássica. A óptica quântica, por
+    <p class="margem"> A óptica geométrica e a óptica física são os dois subcampos da óptica na física clássica. A óptica quântica, por
       outro lado, é um campo que investiga o comportamento quântico e corpuscular da luz e outras radiações, bem como
       sua interação com a matéria, ao levar em conta os conhecimentos da física contemporânea (HELERBROCK, 2023)
     </p>
     <br>
     <h1><strong class="textosTitulo"><em> Optica-Geometrica</em> </strong></h1>
     <br>
-    <p>A luz é interpretada pela óptica geométrica como segmentos de uma linha reta, ou raios de luz. A direção e a
+    <p class="margem">A luz é interpretada pela óptica geométrica como segmentos de uma linha reta, ou raios de luz. A direção e a
       direção da propagação da luz são mostradas usando raios de luz. A óptica geométrica sozinha pode explicar uma
       parte significativa dos fenômenos luminosos que experimentamos regularmente, como sombras, eclipses e reflexos da
       luz (HELERBROCK, 2023)
     </p>
-    <p>
+    <p class="margem">
       Os raios de luz são linhas retas que mostram o caminho da luz, bem como a direção de sua influência. Eles podem
       ser emitidos por dois tipos de fontes:</p>
-    <p> Fontes primárias: aqueles com suas próprias capacidades de emissão de luz, como o sol, a chama de uma vela ou
+    <p class="margem"> Fontes primárias: aqueles com suas próprias capacidades de emissão de luz, como o sol, a chama de uma vela ou
       uma lâmpada (GOUVEIA, 2023);
     </p>
-    <p>Fontes secundárias: que refletem a luz que recebem de uma fonte principal, como um livro que só pode ser visto se
+    <p class="margem">Fontes secundárias: que refletem a luz que recebem de uma fonte principal, como um livro que só pode ser visto se
       refletir a luz que recebe de uma lâmpada ou a lua, que reflete a luz que recebe do sol (MELO, 2023).</p>
-    <p> As fontes luminosas também podem ser classificadas em relação à sua dimensão (HELERBROCK, 2023):
+    <p class="margem"> As fontes luminosas também podem ser classificadas em relação à sua dimensão (HELERBROCK, 2023):
     </p>
-    <p>Fontes extensas: quando se descobre que são significativamente maiores do que a coisa a ser iluminada. Por
+    <p class="margem">Fontes extensas: quando se descobre que são significativamente maiores do que a coisa a ser iluminada. Por
       exemplo: uma lâmpada acesa ao lado de um livro (MELO, 2023);</p>
-    <p>
+    <p class="margem">
       Fontes pontuais: se o tamanho da fonte de luz fosse considerado insignificante em comparação com o objeto que se
       pretendia iluminar (HELERBROCK, 2023).</p>
     <h1><strong class="textosTitulo"><em>Principios da Optica Geometrica</em> </strong></h1>
     <br>
-    <p>Essas ideias descrevem como os raios de luz agem em várias circunstâncias. Eles são verdadeiros quando os meios
+    <p class="margem">Essas ideias descrevem como os raios de luz agem em várias circunstâncias. Eles são verdadeiros quando os meios
       ópticos são homogêneos (têm um índice de refração fixo) e isotrópicos (têm as mesmas qualidades, independentemente
       da direção em que são apontados). cada uma das seguintes orientações (DEON, 2023):</p>
     <br>
-    <p>Princípio da propagação retilínea da luz: Os raios de luz avançam em um caminho reto.</p>
+    <p class="margem">Princípio da propagação retilínea da luz: Os raios de luz avançam em um caminho reto.</p>
     <br>
     <img src="Imagens/optica2.png" alt="Foto Satelite" width="600px" style="margin-left: 110px;">
     <legend style="text-align: center;"><a
@@ -198,7 +198,7 @@
         Aqui</a>
     </legend>
     <br>
-    <p>Princípio da independência dos raios de luz: Dois raios de luz se cruzam como se não existissem um em relação ao
+    <p class="margem">Princípio da independência dos raios de luz: Dois raios de luz se cruzam como se não existissem um em relação ao
       outro (DEON, 2023).</p>
     <img src="Imagens/optica3.png" alt="Foto Satelite" width="600px" style="margin-left: 110px;">
     <legend style="text-align: center;"><a
@@ -207,7 +207,7 @@
         Aqui</a>
     </legend>
     <br>
-    <p>Princípio da reversibilidade dos raios de luz: Feixes de luz podem se mover em qualquer direção enquanto viajam
+    <p class="margem">Princípio da reversibilidade dos raios de luz: Feixes de luz podem se mover em qualquer direção enquanto viajam
       pelo espaço (DEON, 2023).</p>
     <br>
     <img src="Imagens/optica4.png" alt="Foto Satelite" width="600px" style="margin-left: 110px;">
@@ -219,41 +219,41 @@
     <br>
     <h1><strong class="textosTitulo"><em> Cores </em> </strong></h1>
     <br>
-    <p>Uma parte da luz branca que atinge um objeto é absorvida pelo objeto. A luz absorvida pode ser transferida
+    <p class="margem">Uma parte da luz branca que atinge um objeto é absorvida pelo objeto. A luz absorvida pode ser transferida
       diretamente para os átomos, onde pode excitá-los e fornecer-lhes energia térmica, por exemplo. No entanto, parte
       da luz incidente será refletida de volta, e é essa parte da luz que determina a cor dos corpos iluminados. Como
       resultado, quando olhamos para uma bola vermelha, só a vemos como vermelha porque a luz vermelha não pode ser
       absorvida por seus átomos (GOETHE, 2023).
     </p>
     <br>
-    <p> Além disso, o cérebro decodifica estímulos visuais usando cores. A radiação visível é um espectro de frequências
+    <p class="margem"> Além disso, o cérebro decodifica estímulos visuais usando cores. A radiação visível é um espectro de frequências
       de ondas eletromagnéticas que vão do infravermelho ao ultravioleta e são detectáveis ​​pelo olho humano
       (HELERBROCK, 2023).</p>
     <br>
-    <p> Vários tipos de células no olho humano são sintonizadas em três picos de frequência que correspondem às cores
+    <p class="margem"> Vários tipos de células no olho humano são sintonizadas em três picos de frequência que correspondem às cores
       verde, vermelho e azul. Nossa experiência com a cor é "criada" pelo cérebro humano dependendo da interação desses
       três fatores (GOETHE, 2023).</p>
     <br>
     <h1><strong class="textosTitulo"><em>Luz Monocromatica </em> </strong></h1>
     <br>
-    <p>É aquela que apresenta idealmente uma única frequência, ou seja, uma única cor. A luz branca, por exemplo, é
+    <p class="margem">É aquela que apresenta idealmente uma única frequência, ou seja, uma única cor. A luz branca, por exemplo, é
       policromática, ou seja, é composta por diversas frequências de luz (GOETHE, 2023).</p>
     <br>
     <h1><strong class="textosTitulo"><em> Sistemas Opticos </em> </strong></h1>
 <br>
-<p>São dispositivos ópticos dispostos em diferentes formas e tamanhos para manipular a direção de propagação da luz. Existem sistemas ópticos de espelho e refrator (HELERBROCK, 2023).
+<p class="margem">São dispositivos ópticos dispostos em diferentes formas e tamanhos para manipular a direção de propagação da luz. Existem sistemas ópticos de espelho e refrator (HELERBROCK, 2023).
   Sombra e penumbra
 
   </p>
-  <p>  Sistema óptico reflexivo: superfície polida, espelho plano, espelho esférico, etc (GOUVEIA, 2023).
+  <p class="margem">   Sistema óptico reflexivo: superfície polida, espelho plano, espelho esférico, etc (GOUVEIA, 2023).
 </p>
   <br>
-  <p>  Sistema óptico refrativo: dioptria plana, espelho esférico côncavo-convexo, etc (MELO, 2023).
+  <p class="margem">  Sistema óptico refrativo: dioptria plana, espelho esférico côncavo-convexo, etc (MELO, 2023).
 </p>
 <br>
-<p>  As sombras ocorrem quando a luz é interceptada por certos meios opacos. Quando isso acontece, forma-se uma região do espaço onde nenhuma luz incide diretamente, chamada de sombra (GOETHE, 2023).</p>
+<p class="margem">   As sombras ocorrem quando a luz é interceptada por certos meios opacos. Quando isso acontece, forma-se uma região do espaço onde nenhuma luz incide diretamente, chamada de sombra (GOETHE, 2023).</p>
 <br>
-<p>
+<p class="margem">
   A penumbra, por sua vez, é parcialmente iluminada pela luz e está localizada na região de transição entre sombra e luz. As penumbras são produzidas quando objetos opacos são iluminados por fontes de luz estendidas. Se você deseja obter uma compreensão mais profunda de como essas influências são formadas (GOETHE, 2023).</p>
   <br>
   <img src="Imagens/optica5.png" alt="Foto Satelite" width="600px" style="margin-left: 110px;">
