--- a/Mecanica.html
+++ b/Mecanica.html
@@ -15,129 +15,129 @@
     <h1 class="h1cabeça"><strong class="cabeça"> Física Na Mente </strong></h1>
     <div id="mySidebar" class="sidebar">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-<h1 style="text-align: center;">Tópicos</h1>
-    <a href="Ondas.html"><button type="button" class="btn">
-        <strong>Ondas</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+      <h1 style="text-align: center;">Tópicos</h1>
+      <a href="Ondas.html"><button type="button" class="btn">
+          <strong>Ondas</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <br>
-    <a href="Leis De Newton.html">
-      <button type="button" class="btn">
-        <strong>Leis de Newton</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <br>
+      <a href="Leis De Newton.html">
+        <button type="button" class="btn">
+          <strong>Leis de Newton</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <a href="Mecanica.html">
-      <br><button type="button" class="btn">
-        <strong>Mecânica</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <a href="Mecanica.html">
+        <br><button type="button" class="btn">
+          <strong>Mecânica</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <a href="Energia.html">
-      <br><button type="button" class="btn">
-        <strong>Energia</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <a href="Energia.html">
+        <br><button type="button" class="btn">
+          <strong>Energia</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <a href="Eletricidade.html">
-      <br><button type="button" class="btn">
-        <strong>Eletricidade</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <a href="Eletricidade.html">
+        <br><button type="button" class="btn">
+          <strong>Eletricidade</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <a href="CorrentesEletricas.html">
-      <br><button type="button" class="btn">
-        <strong>Correntes Elétricas</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <a href="CorrentesEletricas.html">
+        <br><button type="button" class="btn">
+          <strong>Correntes Elétricas</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <a href="TermoFisica.html">
-      <br><button type="button" class="btn">
-        <strong>Termofísica</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <a href="TermoFisica.html">
+        <br><button type="button" class="btn">
+          <strong>Termofísica</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <br><a href="Optica.html"><button type="button" class="btn">
-        <strong>Óptica</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <br><a href="Optica.html"><button type="button" class="btn">
+          <strong>Óptica</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <br>
-    <a href="Bibliografia.html"><button type="button" class="btn">
-      <strong>Bibliografia</strong>
-      <div id="container-stars">
-        <div id="stars"></div>
-      </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <br>
+      <a href="Bibliografia.html"><button type="button" class="btn">
+          <strong>Bibliografia</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-      <div id="glow">
-        <div class="circle"></div>
-        <div class="circle"></div>
-      </div>
-    </button></a>
-  <br>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <br>
 
     </div>
     <div id="main">
-      <span style="font-size:30px;cursor:pointer;" onclick="openNav()" class="openNav">&#9776;<div
-        class="MenuB">Menu </div></span> 
+      <span style="font-size:30px;cursor:pointer;" onclick="openNav()" class="openNav">&#9776;<div class="MenuB">Menu
+        </div></span>
 
-    </div>  
-  
+    </div>
+
   </div>
   </div>
   <div class="conteudo">
     <h1><strong class="textosTitulo"><em> Mecânica </em> </strong></h1>
     <br>
-    <p>
+    <p class="margem">
       “Segundo Rafael Helerbrock : Mecânica é
       uma grande área da física que se concentra no
       estudo do movimento e repouso dos corpos,
@@ -146,7 +146,7 @@
       <br>
     </p>
     <br>
-    <p>Sendo dividida em mecânica clássica, relativística e quântica.
+    <p class="margem">Sendo dividida em mecânica clássica, relativística e quântica.
       A mecânica, assim como qualquer área da física, sofreu diversas alterações durante o tempo, as bases do que
       chamamos de “mecânica clássica” foram publicadas por Galileu Galilei, Johannes Kepler e Isaac Newton, e no século
       XX sofreu alterações sendo apresentada a mecânica relativística por Albert Einstein, onde era levado em conta
@@ -158,7 +158,7 @@
     <h3><strong class="textosTitulo">O que ela Estuda?
       </strong></h3>
     <br>
-    <p>
+    <p class="margem">
       A mecânica é um ramo da física que estuda o movimento e o comportamento dos objetos sob a influência da força, ou
       seja, todo e qualquer movimento provocado por determinado corpo que sofre a influência de determinada
       força.(HELERBROCK, 2023).
@@ -174,11 +174,12 @@
 
       </strong></h3>
     <br>
-    <p> A primeira Lei de Newton é chamada de princípio da inércia, mas é mais conhecida como Lei da Inércia.
+    <p class="margem"> A primeira Lei de Newton é chamada de princípio da inércia, mas é mais conhecida como Lei da
+      Inércia.
       (HELERBROCK, Rafael, 2023).
     </p>
     <br>
-    <p>
+    <p class="margem">
       A mecânica clássica estuda as variações de força e energia que atuam sobre um corpo, sendo desenvolvida antes do
       século XX e por consequência antes da mecânica relativística, suas análises levam em consideração apenas objetos
       que não estão perto da velocidade da luz, sendo uma ótima escolha para estudar nosso cotidiano. (FERNANDES, 2023).
@@ -186,7 +187,8 @@
       funcionamento dos computadores e celulares.
     </p>
     <br>
-    <p> Mas FISICAMENTE FALANDO, a Lei da Inércia significa que: se algo está parado esse algo pretende ficar parado,
+    <p class="margem"> Mas FISICAMENTE FALANDO, a Lei da Inércia significa que: se algo está parado esse algo pretende
+      ficar parado,
       até venha alguém mexer nele, exemplo, seu celular, se você deixar ele no sofá ele ficará lá até alguém pegar ele,
       sem uma força exterior ele continuará parado, e o mesmo se aplica para corpos em movimento, mas para dar um
       exemplo precisamos ir lá pro espaço, já que lá não tem ar nem gravidade para nos atrapalhar, agora dando o
@@ -196,62 +198,63 @@
       órbita, ao nao ser que seja de outro objeto pequeno) (HELERBROCK, 2023).
     </p>
     <br>
-   
+
     <br>
     <h3><strong class="textosTitulo">Movimento Retilíneo Uniforme (MRU) </strong></h3>
     <br>
-    <p>
+    <p class="margem">
       Segundo o Prof. Augusto Melo(2023), o movimento uniforme é um tipo de movimento em que um objeto percorre
       distâncias iguais em intervalos de tempo iguais, mantendo a mesma velocidade. Sendo assim a velocidade permanece
       constante e invariável por todo trajeto além de sua trajetória ser uma reta.
       A equação que descreve o movimento é:
 
     <h3 style="margin-left: 200px;"> <strong class="textosTitulo">S = s0 + V * t</strong> </h3>
-    <p> S =é a posição final do objeto em relação a um ponto de referência.</p>
-    <p> s0=é a posição inicial do objeto em relação ao mesmo ponto de referência
+    <p class="margem"> S =é a posição final do objeto em relação a um ponto de referência.</p>
+    <p class="margem"> s0=é a posição inicial do objeto em relação ao mesmo ponto de referência
     </p>
-    <p> V= é a velocidade constante do objeto.</p>
-    <p> t = é o tempo em que o objeto levou para percorrer a trajetória.</p>
+    <p class="margem"> V= é a velocidade constante do objeto.</p>
+    <p class="margem"> t = é o tempo em que o objeto levou para percorrer a trajetória.</p>
 
 
     <br>
 
 
     <h3><strong class="textosTitulo">Movimento Retilíneo Uniformemente Variado (MRUV) </strong></h3>
-    <p> um tipo de movimento em que a velocidade de um objeto varia uniformemente ao longo do tempo, sob a ação de uma
+    <p class="margem"> um tipo de movimento em que a velocidade de um objeto varia uniformemente ao longo do tempo, sob
+      a ação de uma
       aceleração constante, ou seja, a velocidade aumenta ou diminui, contudo a aceleração permanece a mesma.(MARTINS,
       2023) .
       A equação da cinemática que descreve o movimento uniformemente variado é dada por:
 
-    <p> <strong class="textosTitulo"> S = S0 + V0*t + (1/2)at^2</strong></p>
-<hr>
+    <p class="margem"> <strong class="textosTitulo"> S = S0 + V0*t + (1/2)at^2</strong></p>
+    <hr>
     <br>
     <h3><strong class="textosTitulo"> Movimento Circular Uniforme (MCU)
 
       </strong></h3>
     <br>
-    <p> No vídeo Movimento Circular Uniforme - Aula 01 do canal
+    <p class="margem"> No vídeo Movimento Circular Uniforme - Aula 01 do canal
       Davi Oliveira - Física 2.0, é apresentado que o movimento circular uniforme é um tipo de movimento em que um
       objeto se move em uma trajetória circular com velocidade constante, a velocidade tangencial ( velocidade
       instantânea do objeto considerado) em qualquer ponto da rota permanece a mesma, contudo a sua direção muda
       continuamente em direção ao centro da circunferência.(OLIVEIRA, 2023).
       A equação desse movimento é:
     </p>
-    <p> <strong class="textosTitulo">  θ = ω*t
-    </strong></p>
+    <p class="margem"> <strong class="textosTitulo"> θ = ω*t
+      </strong></p>
 
 
 
-    <p> θ é o ângulo percorrido pelo objeto na trajetória circular.</p>
-    <p> ω é a velocidade angular do objeto.</p>
-    <p> t é o tempo decorrido desde o início do movimento.</p>
+    <p class="margem"> θ é o ângulo percorrido pelo objeto na trajetória circular.</p>
+    <p class="margem"> ω é a velocidade angular do objeto.</p>
+    <p class="margem"> t é o tempo decorrido desde o início do movimento.</p>
     </p>
     <br>
 
-   
-<br>
+
+    <br>
   </div>
-  
+
   <div id="caixa">
     <h3>Tópicos em Mecanica</h3>
     <br>
@@ -260,10 +263,10 @@
       <br>
       <li><a href="Dinamica.html"><strong> Dinamica e Estatica</strong></a></li>
       <br>
-      
+
     </ul>
   </div>
-  
+
 
 
   <div class="rodape"></div>
