--- a/TermoFisica.html
+++ b/TermoFisica.html
@@ -141,7 +141,7 @@
   <div class="conteudo">
     <h1><strong class="textosTitulo"><em> TermoFísica </em> </strong></h1>
     <br>
-    <p>
+    <p class="margem">
 
       Termofísica ou termologia é o ramo da física que estuda o calor, tratado acerca do calor( Dicionário Oxford
       Languages).
@@ -157,29 +157,29 @@
           Aqui</a> </legend>
     </p>
     <br>
-    <p>Calor (energia calorífica) é a transferência que vai de um corpo para o outro quando há diferença de temperatura
+    <p class="margem">Calor (energia calorífica) é a transferência que vai de um corpo para o outro quando há diferença de temperatura
       de ambos, e o espalhamento de calor pode ocorrer de três formas: Condução Térmica, Convecção Térmica e a
       Irradiação Térmica (HELERBROCK, 2023).
 
 
     </p>
-    <p> Condução Térmica: Transferência de calor através do contato de superfície,
+    <p class="margem"> Condução Térmica: Transferência de calor através do contato de superfície,
       Convecção Térmica: Transferência de calor em razão da formação de correntes convectivas em um fluido,
       Irradiação Térmica: Transferência de calor por ondas eletromagnéticas</p>
-    <p></p>
+    <p class="margem"></p>
     <br>
     <h1><strong class="textosTitulo"><em> Condução Térmica </em> </strong></h1>
     <br>
-    <p>A condução térmica é um processo de transferência de calor que ocorre quando há uma diferença de temperatura
+    <p class="margem">A condução térmica é um processo de transferência de calor que ocorre quando há uma diferença de temperatura
       entre dois pontos em um material. Esse processo ocorre por meio das vibrações moleculares do material. Isso
       transfere energia térmica de uma molécula para outra molécula adjacente (HELERBROCK, 2023).</p>
     <br>
-    <p>Mais tecnicamente, podemos dizer que a condução de calor é regida pela lei de Fourier, que afirma que o fluxo de
+    <p class="margem">Mais tecnicamente, podemos dizer que a condução de calor é regida pela lei de Fourier, que afirma que o fluxo de
       calor é diretamente proporcional à diferença de temperatura e à área da seção transversal de um material, e
       inversamente proporcional à distância entre dois pontos (MELO, 2023).
     </p>
     <br>
-    <p>E a condução térmica depende muito do material que está passando a condutividade térmica, por exemplo os metais
+    <p class="margem">E a condução térmica depende muito do material que está passando a condutividade térmica, por exemplo os metais
       eles tem uma condutividade térmica alta, e já os plásticos e madeiras tem um nível de condutividade térmica baixa
       (HELERBROCK, 2023).</p>
     <br>
@@ -196,43 +196,43 @@
         Imagem Dísponivel
         Aqui</a> </legend>
     <br>
-    <p>A convecção térmica é o processo de transferência de calor que ocorre através do movimento de um fluido aquecido
+    <p class="margem">A convecção térmica é o processo de transferência de calor que ocorre através do movimento de um fluido aquecido
       (gás ou líquido). Esse processo leva a diversos fenômenos naturais, como a formação da circulação atmosférica e
       das correntes oceânicas (HELERBROCK, 2023). </p>
     <br>
-    <p>Quando um fluido é aquecido em um determinado ponto, sua densidade diminui, fazendo com que ele fique mais leve e
+    <p class="margem">Quando um fluido é aquecido em um determinado ponto, sua densidade diminui, fazendo com que ele fique mais leve e
       suba. Esse movimento ascendente faz com que a pressão na área aquecida caia, fazendo com que o fluido circundante
       flua para preencher o espaço vazio. Esse movimento descendente do fluido circundante é chamado de convecção
       descendente (GOUVEIA, 2023).</p>
     <br>
-    <p>Esse ciclo convectivo de ascensão e queda faz com que o fluido se mova, trazendo calor para outras partes do
+    <p class="margem">Esse ciclo convectivo de ascensão e queda faz com que o fluido se mova, trazendo calor para outras partes do
       sistema. Esse processo é chamado de convecção natural porque acontece espontaneamente sem nenhum equipamento
       externo (MELO, 2023).</p>
     <br>
-    <p>Há também casos de convecção forçada, causada por equipamentos externos. É o caso, por exemplo, de um radiador,
+    <p class="margem">Há também casos de convecção forçada, causada por equipamentos externos. É o caso, por exemplo, de um radiador,
       que aquece o ar com o qual entra em contato, provocando uma convecção forçada que leva o ar aquecido para outras
       partes do ambiente (HELERBROCK, 2023).</p>
     <br>
-    <p>A convecção térmica é um processo importante para a compreensão de muitos fenômenos naturais, como as correntes
+    <p class="margem">A convecção térmica é um processo importante para a compreensão de muitos fenômenos naturais, como as correntes
       oceânicas e a circulação atmosférica. Além disso, é um processo fundamental em diversas áreas da engenharia, como
       transferência de calor e mecânica dos fluidos (HELERBROCK, 2023).</p>
     <br>
     <h1><strong class="textosTitulo"><em>Irradiação Térmica </em> </strong></h1>
     <br>
-    <p>A radiação térmica é um tipo de transferência de calor que ocorre quando a energia é transferida na forma de
+    <p class="margem">A radiação térmica é um tipo de transferência de calor que ocorre quando a energia é transferida na forma de
       ondas eletromagnéticas. Ao contrário da condução e da convecção, que requerem um meio material para ocorrer, a
       radiação térmica pode ocorrer através do vácuo, como é o caso do sol aquecendo a Terra (HELERBROCK, 2023).
     </p>
     <br>
-    <p>A energia térmica é emitida por objetos aquecidos na forma de radiação eletromagnética, que pode ser classificada
+    <p class="margem">A energia térmica é emitida por objetos aquecidos na forma de radiação eletromagnética, que pode ser classificada
       de acordo com seu comprimento de onda ou frequência. A radiação térmica é uma forma de radiação infravermelha com
       comprimentos de onda mais longos do que a luz visível (GOUVEIA, 2023).</p>
     <br>
-    <p>A energia emitida por um objeto aquecido depende de sua temperatura, área de superfície e propriedades do
+    <p class="margem">A energia emitida por um objeto aquecido depende de sua temperatura, área de superfície e propriedades do
       material. Objetos mais quentes emitem mais radiação eletromagnética e a taxa de emissividade de energia aumenta à
       medida que a temperatura do objeto aumenta (HELERBROCK, 2023).</p>
     <br>
-    <p>A radiação térmica é importante em algumas aplicações práticas, como a geração de eletricidade por meio de
+    <p class="margem">A radiação térmica é importante em algumas aplicações práticas, como a geração de eletricidade por meio de
       painéis solares.</p>
     <br>
     <img src="Imagens/os-processos-transmissao-calor-estao-inseridos-no-cotidiano-1315837060.webp" alt="Foto Satelite"
@@ -241,7 +241,7 @@
         Imagem Dísponivel
         Aqui</a> </legend>
     <br>
-    <p>Nesta imagem vemos os três tipos de espalhamento do calor ao mesmo tempo.</p>
+    <p class="margem">Nesta imagem vemos os três tipos de espalhamento do calor ao mesmo tempo.</p>
   </div>
   <div class="rodape"></div>
 
